@@ -1,6 +1,7 @@
 Vesrion 1.54:
-	- Updated the makefile to build GPU code for more recent GPUs
 	- Removed exit() call from error path in NFS filtering (thanks jrcrombie)
+	- Made the maximum merge weight configurable (thanks Lionel Debroux)
+	- Updated the makefile to build GPU code for more recent GPUs
 
 Version 1.53: 11/11/16
 	- Replaced the GPU sorting library with calls to CUB; this is more
